--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -17,20 +17,17 @@ services:
               enabled: false
     volumes:
       - /var/lib/car-planner/registry:/var/lib/registry
-  db:
-    image: mysql
-    restart: always
+  mysql:
+    image: mysql:5.7
     container_name: mysql
     environment:
       MYSQL_DATABASE: 'car-planner'
       MYSQL_ROOT_PASSWORD: 'mypassword'
-    ports:
-      - '6767:3306'
     expose:
       - '3306'
     volumes:
       - /var/lib/car-planner/mysql:/var/lib/mysql
-  web:
+  flask:
     image: flask-image
     restart: always
     container_name: flask
@@ -39,6 +36,6 @@ services:
     expose:
       - '5000'
     depends_on:
-      - db
+      - mysql
     volumes:
       - /var/lib/car-planner/flask:/app
