--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -15,8 +15,10 @@ services:
               enabled: false
           readonly:
               enabled: false
+
     volumes:
       - /var/lib/car-planner/registry:/var/lib/registry
+
   mysql:
     image: mysql:5.7
     container_name: mysql
@@ -25,11 +27,22 @@ services:
       MYSQL_ROOT_PASSWORD: 'mypassword'
     expose:
       - '3306'
+
     volumes:
       - /var/lib/car-planner/mysql:/var/lib/mysql
+    networks:
+      - webnet
+
   flask:
     image: flask-image
-    restart: always
+    deploy:
+      replicas: 3
+      resources:
+        limits:
+          cpus: "0.2"
+          memory: 100M
+      restart_policy:
+        condition: on-failure
     container_name: flask
     ports:
       - '80:5000'
@@ -37,13 +50,22 @@ services:
       - '5000'
     depends_on:
       - mysql
+
     volumes:
       - /var/lib/car-planner/flask:/app
+    networks:
+      - webnet
+
   emailer:
     image: emailer-image
     restart: always
     container_name: emailer
     depends_on:
       - mysql
+
+    networks:
+      - webnet
     volumes:
-      - /var/lib/car-planner/flask:/app
+      - /var/lib/car-planner/emailer:/app
+networks:
+  webnet:
