--- a/Aplicatie/docker-compose.yml
+++ b/Aplicatie/docker-compose.yml
@@ -1,26 +1,26 @@
 version: '3'
 services:
-  registry:
-    image: registry:2
-    deploy:
-      replicas: 1
-      resources:
-        limits:
-          cpus: "0.2"
-          memory: 100M
-      restart_policy:
-        condition: on-failure
-    ports:
-      - '444:444'
-    environment:
-      REGISTRY_HTTP_ADDR: 0.0.0.0:444
-      REGISTRY_STORAGE_MAINTENANCE: |-
-          uploadpurging:
-              enabled: false
-          readonly:
-              enabled: false
-    volumes:
-      - /var/lib/car-planner/registry:/var/lib/registry
+#  registry:
+#    image: registry:2
+#    deploy:
+#      replicas: 1
+#      resources:
+#        limits:
+#          cpus: "0.2"
+#          memory: 100M
+#      restart_policy:
+#        condition: on-failure
+#    ports:
+#      - '444:444'
+#    environment:
+#      REGISTRY_HTTP_ADDR: 0.0.0.0:444
+#      REGISTRY_STORAGE_MAINTENANCE: |-
+#          uploadpurging:
+#              enabled: false
+#          readonly:
+#              enabled: false
+#    volumes:
+#      - /var/lib/car-planner/registry:/var/lib/registry
 
 
   mysql:
@@ -53,7 +53,7 @@ services:
       restart_policy:
         condition: on-failure
     ports:
-      - '80:5000'
+      - '8000:5000'
     depends_on:
       - mysql
     volumes:
@@ -82,4 +82,4 @@ services:
 networks:
   webnet:
     driver: overlay
-    internal: true
+    internal: false
