--- a/Aplicatie/docker-compose.yml
+++ b/Aplicatie/docker-compose.yml
@@ -38,7 +38,7 @@ services:
         condition: on-failure
     volumes:
       - /var/lib/car-planner/mysql:/var/lib/mysql
-      - /home/ebi/Desktop/Git/licenta/Aplicatie/MySQL/mycustom.cnf:/etc/mysql/conf.d/mycustom.cnf
+      - /var/lib/car-planner/mysql-conf/mycustom.cnf:/etc/mysql/conf.d/mycustom.cnf
     networks:
       - webnet
 
@@ -46,7 +46,7 @@ services:
   flask:
     image: flask-image
     deploy:
-      replicas: 1
+      replicas: 3
       restart_policy:
         condition: on-failure
     ports:
@@ -61,6 +61,7 @@ services:
 
   emailer:
     image: emailer-image
+    command: tail -f /dev/null
     deploy:
       replicas: 1
       restart_policy:
@@ -68,7 +69,7 @@ services:
     depends_on:
       - mysql
     volumes:
-      - /home/ebi/Desktop/Git/licenta/Aplicatie/Emailer:/app
+      - /home/ebi/Desktop/Git/licenta/Aplicatie/Flask:/app
     networks:
       - webnet
 
